--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,11 +14,17 @@
   "dependencies": {
     "@chakra-ui/react": "^3.1.2",
     "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "framer-motion": "^11.11.17",
+    "intersection-observer": "^0.12.2",
     "next-themes": "^0.4.3",
+    "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
